Update Bluesky URL

--- a/public/bluesky/index.html
+++ b/public/bluesky/index.html
@@ -3,10 +3,10 @@
     <title>Bluesky | aciddotEXE</title>
     <meta
       http-equiv="refresh"
-      content="0; url=https://bsky.app/profile/aciddotexe.bsky.social"
+      content="0; url=https://bsky.app/profile/aciddotexe.com"
     />
   </head>
   <body>
-    <a href="https://bsky.app/profile/aciddotexe.bsky.social"> Redirect </a>
+    <a href="https://bsky.app/profile/aciddotexe.com"> Redirect </a>
   </body>
 </html>
